--- a/forma.html
+++ b/forma.html
@@ -1,5 +1,5 @@
 <h2>Edit data about {{edit.client.firstname}}</h2>
-<form class="form-horizontal" ng-controller="editCtrl as forma">
+<form class="form-horizontal" >
     <div class="form-group">
         <label class="control-label" for="inputTitle">First Name</label>
         <div class="controls">
