--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div>
             <div class="col-md-4">
                 <h3>My Clients</h3>
-                <story class="callout"
+                <client class="callout"
                        ng-repeat="client in main.clients"
                        ng-click="main.showClient(client.id)"
-                       > </story>
+                       > </client>
                 <br/>
                 <a class="btn btn-primary" ng-click="main.addClient()">
                     <span class="glyphicon glyphicon-plus" ></span>
