--- a/forma.html
+++ b/forma.html
@@ -34,12 +34,36 @@
         <input type="text" class="form-control" id="inputTitle" ng-model="edit.client.phone" />
         </div>
     </div>
+</form>
 
-    <div class="form-group">
-        <label class="control-label" for="inputReporter">Date of Birth</label>
-        <div class="controls">
-        <input type="date" name="bday" mg-model=edit.client.birth>
-        </div>
+
+
+    <div ng-controller="DatepickerCtrl as picker">
+        <pre>Selected date is: <em>{{edit.client.birth | date:'fullDate' }}</em></pre>
+
+
+        <form name="myForm" role="form" novalidate="novalidate" class="form-inline">
+
+            <div class="form-group">
+                <label for="sel1">Enter Birthday:</label>
+                <select ng-model="picker.month" required class="form-control" ng-options="month.name for month in picker.months" >
+                </select>
+            </div>
+
+            <div class="form-group">
+                <select ng-model="picker.day" class="form-control" required ng-options="day for day in picker.days" >
+                </select>
+            </div>
+
+            <div class="form-group">
+                <select ng-model="picker.year" class="form-control" ng-options="year for year in picker.years">
+                </select>
+            </div>
+
+        </form>
     </div>
 
-</form>
+
+
+  
+
