code devided into modules

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.1.3/ui-bootstrap-tpls.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.1.3/ui-bootstrap.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
+    <script type="text/javascript" src="modelservice.js"></script>
+    <script type="text/javascript" src="datepicker.js"></script>
     <script type="text/javascript" src="app.js"></script>
     
 
@@ -21,7 +23,7 @@
         <div>
             <div class="col-md-4">
 
-                <h3>My Clients</h3>
+                <a href="#/"><h3>My Clients</h3></a>
                 <a class="btn btn-primary" ng-click="main.addClient()">
                     <span class="glyphicon glyphicon-plus" ></span>
                 </a>              
