--- a/forma.html
+++ b/forma.html
@@ -9,7 +9,7 @@
     <div class="form-group">
         <label class="control-label" for="inputStatus">Surname</label>
         <div class="controls">
-            <input type="text" class="form-control" id="inputTitle" ng-model="edit.client.lastname" />
+            <input type="text" ng-required="true" class="form-control" id="inputTitle" ng-model="edit.client.lastname" />
         </div>
     </div>
 
