--- a/forma.html
+++ b/forma.html
@@ -1,5 +1,5 @@
 <h2>Edit data about {{edit.client.firstname}}</h2>
-<form class="form-horizontal" >
+<form class="form-horizontal" name="forma">
     <div class="form-group">
         <label class="control-label" for="inputTitle">First Name</label>
         <div class="controls">
@@ -23,15 +23,15 @@
     <div class="form-group">
         <label class="control-label" for="inputAcceptance">Address</label>
         <div class="controls">
-            <textarea id="inputAcceptance" class="form-control" placeholder="Address" rows="3"
-                      ng-model="edit.client.address"></textarea>
+            <textarea id="inputAcceptance" class="form-control" placeholder="Address" rows="3" ng-model="edit.client.address"></textarea>
         </div>
     </div>
 
     <div class="form-group">
         <label class="control-label" for="inputType">Phone Number</label>
         <div class="controls">
-        <input type="text" class="form-control" id="inputTitle" ng-model="edit.client.phone" />
+        <input type="text" name="phone" class="form-control" id="inputTitle" ng-pattern="edit.phoneRegex" ng-model="edit.client.phone" />
+        <p ng-show="forma.phone.$invalid">number not valid {{phone.$valid}}</p>
         </div>
     </div>
 </form>
