datepicker moved into a directive (isolated scope)

--- a/detajli.html
+++ b/detajli.html
@@ -1,4 +1,4 @@
-<table ng-controller = "detajlCtrl as detajl">
+<table>
     <tr>
         <td>First Name: </td>
         <td>{{detajl.client.firstname}}</td>
