--- a/forma.html
+++ b/forma.html
@@ -38,8 +38,10 @@
 </form>
 
 
-
-    <div ng-controller="DatepickerCtrl as picker">
+<pick date="edit.client.birth">
+    <!--pre>Selected date is: <em>{{edit.birthday| date:'fullDate' }}</em></pre-->
+</pick>
+    <!--div ng-controller="DatepickerCtrl as picker">
         <pre>Selected date is: <em>{{edit.birthday| date:'fullDate' }}</em></pre>
 
 
@@ -62,7 +64,7 @@
             </div>
 
         </form>
-    </div>
+    </div-->
 
 
 
