--- a/forma.html
+++ b/forma.html
@@ -37,34 +37,10 @@
     </div>
 </form>
 
+<pre>Selected date is: <em>{{edit.birthday| date:'fullDate' }}</em></pre>
 
-<pick date="edit.client.birth">
-    <!--pre>Selected date is: <em>{{edit.birthday| date:'fullDate' }}</em></pre-->
-</pick>
-    <!--div ng-controller="DatepickerCtrl as picker">
-        <pre>Selected date is: <em>{{edit.birthday| date:'fullDate' }}</em></pre>
+<pick date="edit.client.birth"></pick>
 
-
-        <form name="myForm" role="form" novalidate="novalidate" class="form-inline">
-
-            <div class="form-group">
-                <label for="sel1">Enter Birthday:</label>
-                <select ng-model="picker.month" required class="form-control" ng-options="month.name for month in picker.months" >
-                </select>
-            </div>
-
-            <div class="form-group">
-                <select ng-model="picker.day" class="form-control" required ng-options="day for day in picker.days" >
-                </select>
-            </div>
-
-            <div class="form-group">
-                <select ng-model="picker.year" class="form-control" ng-options="year for year in picker.years">
-                </select>
-            </div>
-
-        </form>
-    </div-->
 
 
 
