some code rearrangement, add some comments

--- a/default.html
+++ b/default.html
@@ -1,3 +1,3 @@
-<h3>Hello hairdresser! Do we have a new client today?</h3>
+<h3>Hello hairdresser! Do we have a new client today? :D</h3>
 <h4>Have we lost somebody? :(</h4>
 <h2>Just work hard!</h2>
