--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.1.3/ui-bootstrap.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
     <script type="text/javascript" src="modelservice.js"></script>
-    <script type="text/javascript" src="datepicker.js"></script>
+    <script type="text/javascript" src="datepicker-directive/datepicker.js"></script>
     <script type="text/javascript" src="app.js"></script>
     
 
