--- a/index.html
+++ b/index.html
@@ -6,23 +6,16 @@
     <link rel="stylesheet" href="app.css">
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.1.3/ui-bootstrap-tpls.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.1.3/ui-bootstrap.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
-    <script type="text/javascript" src="modelservice.js"></script>
-    <script type="text/javascript" src="datepicker-directive/datepicker.js"></script>
-    <script type="text/javascript" src="app.js"></script>
-    
-
-
+    <script type="text/javascript" src="js/vendor/angular.js"></script>
+    <script type="text/javascript" src="js/vendor/angular-route.js"></script>
+    <script type="text/javascript" src="js/modelservice.js"></script>
+    <script type="text/javascript" src="js/datepicker-directive/datepicker.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
     <title>Hairdresser's backoffice</title>
 </head>
     <body ng-controller="MainCtrl as main">
         <div>
-            <div class="col-md-4">
-
+            <div class="col-md-4"> <!--  levo  -->
                 <a href="#/"><h3>My Clients</h3></a>
                 <a class="btn btn-primary" ng-click="main.addClient()">
                     <span class="glyphicon glyphicon-plus" ></span>
@@ -31,12 +24,12 @@
                 <div id="scroller">
                     <client class="callout"
                            ng-repeat="client in main.clients"
-                           ng-click="main.showClient(client.id)"
-                           > </client>
+                           ng-click="main.showClient(client.id)">
+                    </client>
                     <br/>
                 </div>
             </div>
-            <div class="col-md-8 content desno" ><div ng-view></div>
+            <div class="col-md-8 content desno" ><div ng-view></div><!--  desno  -->
 
             </div>
         </div>
