--- a/forma.html
+++ b/forma.html
@@ -1,48 +1,40 @@
 <h2>Edit data about {{edit.client.firstname}}</h2>
 <form class="form-horizontal" name="forma">
     <div class="form-group">
-        <label class="control-label" for="inputTitle">First Name</label>
+        <label class="control-label col-sm-2" for="firstname">First Name</label>
         <div class="controls">
-            <input type="text" class="form-control" id="inputTitle" ng-model="edit.client.firstname" />
+            <input type="text" name="firstname" class="form-control" id="firstname" ng-model="edit.client.firstname" />
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label" for="inputStatus">Surname</label>
+        <label class="control-label col-sm-2" for="surname">Surname</label>
         <div class="controls">
-            <input type="text" ng-required="true" class="form-control" id="inputTitle" ng-model="edit.client.lastname" />
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label class="control-label" for="inputDescription">Email</label>
-        <div class="controls">
-        <input type="email" name="email" class="form-control" id="inputTitle" ng-model="edit.client.email" /><p class="error" ng-show="forma.email.$error.email">
-        Not valid email!</p>
+            <input type="text" name="surname" ng-required="true" class="form-control" id="surname" ng-model="edit.client.lastname" />
         </div>
     </div>
 
     <div class="form-group">
-        <label class="control-label" for="inputAcceptance">Address</label>
+        <label class="control-label col-sm-2" for="email">Email</label>
         <div class="controls">
-            <textarea id="inputAcceptance" class="form-control" placeholder="Address" rows="3" ng-model="edit.client.address"></textarea>
+            <input type="email" name="email" class="form-control" id="email" ng-model="edit.client.email"/>
+                <span class="error" ng-show="forma.email.$error.email">Not valid email!</span>
         </div>
     </div>
 
     <div class="form-group">
-        <label class="control-label" for="inputType">Phone Number</label>
-        <div class="controls">
-        <input type="text" name="phone" class="form-control" id="inputTitle" ng-pattern="edit.phoneRegex" ng-model="edit.client.phone" />
-        <p ng-show="forma.phone.$invalid">number not valid {{phone.$valid}}</p>
-        </div>
+    <div>
+        <label class="control-label col-sm-2" for="address">Address</label>
+
+            <textarea id="address" class="form-control" placeholder="Address" rows="3" ng-model="edit.client.address"></textarea>
+            </div>
+    </div>
+
+    <div class="form-group">
+
+        <label class="control-label col-sm-2" for="phone">Phone Number</label>
+        <input type="text" name="phone" id="phone" class="form-control"  ng-pattern="edit.phoneRegex" ng-model="edit.client.phone" />
+        <span class="error" ng-show="forma.phone.$invalid">number not valid</span>
     </div>
 </form>
 
-<pre>Selected date is: <em>{{edit.birthday| date:'fullDate' }}</em></pre>
-
 <pick date="edit.client.birth"></pick>
-
-
-
-
-  
-
