--- a/js/datepicker-directive/datepicker.html
+++ b/js/datepicker-directive/datepicker.html
@@ -1,21 +1,20 @@
-<div>
+
     <form name="myForm" role="form" novalidate="novalidate" class="form-inline">
+        <label for="month" class="control-label col-sm-2 picker-label">Enter Birthday:</label>
+        <div id="pika">
+            <div class="form-group">
+                <select name="month" ng-model="month" required class="form-control" ng-options="month.name for month in months">
+                </select>
+            </div>
 
-        <div class="form-group">
-            <label for="month">Enter Birthday:</label>
-            <select name="month" ng-model="month" required class="form-control" ng-options="month.name for month in months">
-            </select>
+            <div class="form-group">
+                <select ng-model="day" class="form-control" required ng-options="day for day in days" >
+                </select>
+            </div>
+
+            <div class="form-group">
+                <select ng-model="year" class="form-control" ng-options="year for year in years">
+                </select>
+            </div>
         </div>
-
-        <div class="form-group">
-            <select ng-model="day" class="form-control" required ng-options="day for day in days" >
-            </select>
-        </div>
-
-        <div class="form-group">
-            <select ng-model="year" class="form-control" ng-options="year for year in years">
-            </select>
-        </div>
-
     </form>
-</div>
