--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-sm-3"> <!--  levo  -->
                 <a href="#/"><h3>My Clients</h3></a>
-                <a class="btn btn-primary" ng-click="main.addClient()">
+                <a class="btn btn-primary" ng-click="main.addClient($index)" ng-class="{selected:main.selectedRow == $index}">
                     <span class="glyphicon glyphicon-plus" ></span>
                 </a>              
 
