fix two ugly bugs

--- a/detajli.html
+++ b/detajli.html
@@ -7,7 +7,7 @@
         <td>Last Name: </td>
         <td>{{detajl.client.lastname}}</td>
     </tr>
-    <tr>
+    <tr class="address">
         <td>Address: </td>
         <td>{{detajl.client.address}}</td>
     </tr>   
