--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         <div class="row">
             <div class="col-sm-3"> <!--  levo  -->
                 <a href="#/"><h3>My Clients</h3></a>
-                <a class="btn btn-primary" ng-click="main.addClient()">
+                <a class="btn btn-primary" ng-click="main.color(main.counter+1); main.addClient()">
                     <span class="glyphicon glyphicon-plus" ></span>
                 </a>              
 
                 <div id="scroller">
                     <client class="callout" 
-                           ng-class="{selected:main.selectedRow == $index}"
+                           ng-class="{selected:main.row==$index}"
                            ng-repeat="client in main.clients"
-                           ng-click="main.showClient(client.id, $index)">
+                           ng-click="main.showClient(client.id); main.color($index)">
                     </client>
                     <br/>
                 </div>
